--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<div class="lightbox hidden">
 		<div class="centeredchild">
 			<div class="videowrapper">
-				<iframe src="https://www.youtube.com/embed/" frameborder="0" allowfullscreen></iframe>
+				<iframe src="" frameborder="0" allowfullscreen></iframe>
 			</div>
 			<a href="#" class="js-channel-link">View more from this channel</a>
 		</div>
